[workspace]
resolver = '2'
members = [
  "spellrs_filetype",
  "spellrs_url",
  "spellrs_js",
  "spellrs_hunspell"
]

[package]
name = "spellrs"
version = "0.1.0"
description = "Performant spell checker ported from streesidesoftware's `cspell`"
repository.workspace = true
license.workspace = true
include.workspace = true
edition.workspace = true
authors = ["Roy E. Crippen IV"]

[workspace.package]
authors = ["Roy E. Crippen IV"]
license = "MIT"
edition = "2021"
repository = "https://github.com/roycrippen4/spellrs"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

[dependencies]
spellrs_filetype = { path = "./spellrs_filetype" }
spellrs_url = { path = "./spellrs_url" }
