[package]
name = "spellrs_filetype"
version = "0.1.0"
description = "Library to determine file types based upon the file name."
keywords = ["spellrs", "filetypes"]
authors.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
once_cell = "1.20.2"
regex = "1.11.1"
spellrs_js = { path = "../spellrs_js" }
