[package]
name = "spellrs_hunspell"
version = "0.1.0"
description = "A library for reading Hunspell Dictionary files"
keywords = ["spellrs", "hunspel"]
authors.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
url = "2.5.4"
once_cell = "1.20.2"
regex = "1.11.1"
