[package]
name = "spellrs_js"
version = "0.1.0"
description = "Javascript-like utilities to make porting js code easier"
keywords = ["spellrs", "js", "javascript"]
authors.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
url = "2.5.4"
once_cell = "1.20.2"
regex = "1.11.1"
